REOPENED228714
REGRESSION (r280531): multiple modern-media-controls tests have become flaky timeouts
https://bugs.webkit.org/show_bug.cgi?id=228714
Summary REGRESSION (r280531): multiple modern-media-controls tests have become flaky ...
Attachments
Patch (2.59 KB, patch)
2021-08-02 15:09 PDT, Jer Noble
no flags
Radar WebKit Bug Importer
Comment 1 2021-08-02 13:33:53 PDT
Radar WebKit Bug Importer
Comment 2 2021-08-02 13:34:16 PDT
Ryan Haddad
Comment 3 2021-08-02 13:37:45 PDT
I think this affects many modern-media-controls tests. We saw this before when the change was originally landed (https://bugs.webkit.org/show_bug.cgi?id=228660), which led to it being reverted.
Eric Hutchison
Comment 4 2021-08-02 13:50:52 PDT
Appears to have been caused by rdar://81336280 ([Cocoa] Remove support for AVAssetImageGenerator (228560)).
Jer Noble
Comment 5 2021-08-02 15:09:03 PDT
EWS
Comment 6 2021-08-03 06:15:46 PDT
Committed r280589 (240211@main): <https://commits.webkit.org/240211@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 434791 [details].
ayumi_kojima
Comment 7 2021-08-03 11:58:53 PDT
*** Bug 228742 has been marked as a duplicate of this bug. ***
Ryan Haddad
Comment 8 2021-08-03 18:11:09 PDT
Reverted r280531 and r280589 for reason: caused Committed r280624 (240237@main): <https://commits.webkit.org/240237@main>
Note You need to log in before you can comment on or make changes to this bug.